--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
+    "postcss": "^8.4.40",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
+    "redux": "^5.0.1",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
